--- a/Coffee shop website/style.css
+++ b/Coffee shop website/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Miniver&family=Poppins:ital,wght@0,400;0,500;0,600;0,700;1,400&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Mystery+Quest&family=Noto+Serif:ital,wght@0,100..900;1,100..900&family=Outfit:wght@100..900&family=Source+Sans+3:ital,wght@0,200..900;1,200..900&display=swap');
 
 * {
     margin: 0;
@@ -113,6 +113,7 @@ header {
 }
 
 .logo-text {
+    font-family: "Mystery Quest";
     font-size: var(--font-size-xl);
     font-weight: var(--font-weight-semibold);
     color: var(--white-color);
